<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">小海Music</string>
    <string name="version">v1.0</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_channel">频道</string>

    <!--menu-->
    <string name="news">新闻</string>
    <string name="zhihu">知乎</string>
    <string name="photo">图片</string>
    <string name="tools">设置</string>
    <string name="no_photo_mode">无图模式</string>
    <string name="night_mode">夜间模式</string>
    <string name="about">关于</string>

    <!-- 新闻 -->
    <string name="load_error">加载失败</string>
    <string name="db_error">数据库出错了</string>
    <string name="internet_error">网络异常,请检查网络设置</string>
    <string name="news_from">%1$s %2$s</string>
    <string name="loading">加载中…</string>
    <string name="no_more">没有更多了</string>
    <string name="photo_collections">图集：%1$s</string>
    <string name="photo_detail_title">%1$d/%2$d　%3$s</string>
    <string name="photo_news">图片新闻</string>
    <string name="retry_after">请稍后重试</string>
    <string name="share">分享</string>
    <string name="share_contents">来自「多彩资讯」的分享：%1$s %2$s</string>
    <string name="web_view">WebView</string>
    <string name="browser">用浏览器打开</string>
    <string name="retry_refresh_news">点我一下 重新加载</string>

    <!-- 共享过度动画 -->
    <string name="transition_photos">transition_animation_news_photos</string>

    <!-- 新闻频道 -->
    <string name="channel_explain">点击可增删/长按并拖拽可排序</string>
    <string name="my_channel">我的频道</string>
    <string name="more_channel">更多频道</string>
    <string name="channel_manage">频道管理</string>

    <!-- 图片 -->
    <string name="girl">妹纸</string>
    <string name="error_try_again">错误，请重试</string>
    <string name="save">保存</string>
    <string name="set_wallpaper">设为壁纸</string>
    <string name="picture_already_save_to">图片已保存至%1$s</string>
    <string name="set_wallpaper_success">设置壁纸成功</string>
    <string name="about_msg">

    </string>
    <string name="action_settings">设置</string>
    <string name="private_fm">私人FM</string>
    <string name="every_recommend">每日歌曲推荐</string>
    <string name="new_music_rank">新歌排行榜</string>
    <string name="banner">轮播图</string>
    <string name="hot_music_album">热门歌单</string>
    <string name="see_into">进去看看</string>
    <string name="exclusive_report">独家放送</string>
    <string name="new_music">最新音乐</string>
    <string name="good_mv">推荐MV</string>
    <string name="action_download">下载</string>
    <string name="action_search">搜索</string>
    <string name="load_hint">努力加载中······</string>
    <string name="my_signer">我的歌手</string>
    <string name="mv">我的MV</string>
    <string name="download_manager">下载管理</string>
    <string name="local_music">本地音乐</string>
    <string name="recently_play">最近播放</string>
    <string name="action_share">分享</string>
    <string name="video">Video</string>

    <string name="audio">Audio</string>

    <string name="text">Text</string>

    <string name="retry">Retry</string>

    <string name="selection_disabled">Disabled</string>

    <string name="selection_default">Default</string>

    <string name="selection_default_none">Default (none)</string>

    <string name="unexpected_intent_action">Unexpected intent action: <xliff:g id="action">%1$s</xliff:g></string>

    <string name="enable_random_adaptation">Enable random adaptation</string>

    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>

    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>

    <string name="error_drm_unknown">An unknown DRM error occurred</string>

    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>

    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>

    <string name="error_querying_decoders">Unable to query device decoders</string>

    <string name="error_instantiating_decoder">Unable to instantiate decoder
        <xliff:g id="decoder_name">%1$s</xliff:g></string>

    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>

    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>

    <string name="storage_permission_denied">Permission to access storage was denied</string>

    <string name="sample_list_load_error">One or more sample lists failed to load</string>
    <string name="hot_search">热门搜索</string>
    <string name="search_music">搜索音乐、歌手、歌词、...</string>
    <string name="not_develop">该功能正在开发中</string>
    <string name="action_scan">扫描本地音乐</string>
    <string name="action_sort">选择排序方式</string>
    <string name="action_upgrade_quality">升级音质</string>
    <string name="durationformatshort" translatable="false"><xliff:g id="format">%2$d:%3$02d</xliff:g></string>
    <string name="durationformatlong" translatable="false"><xliff:g id="format">%1$d:%2$02d:%3$02d</xliff:g></string>
</resources>
