<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <ImageView
            style="@style/local_fragment_img"

            android:src="@mipmap/ic_local_music" />

        <TextView
            android:id="@+id/txt_local_music"
            style="@style/local_fragment"
            android:drawableBottom="@drawable/ic_drawable_cut_line"

            android:text="@string/local_music" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <ImageView
            style="@style/local_fragment_img"

            android:src="@mipmap/ic_recently_play" />

        <TextView
            android:id="@+id/txt_recently_play"
            style="@style/local_fragment"
            android:drawableBottom="@drawable/ic_drawable_cut_line"
            android:text="@string/recently_play" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <ImageView
            style="@style/local_fragment_img"

            android:src="@mipmap/ic_manager_download" />

        <TextView
            android:id="@+id/txt_manager_download"
            style="@style/local_fragment"
            android:drawableBottom="@drawable/ic_drawable_cut_line"
            android:text="@string/download_manager" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <ImageView
            style="@style/local_fragment_img"


            android:src="@mipmap/ic_my_signer" />

        <TextView
            android:id="@+id/txt_my_signer"
            style="@style/local_fragment"
            android:drawableBottom="@drawable/ic_drawable_cut_line"
            android:text="@string/my_signer" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <ImageView
            style="@style/local_fragment_img"
            android:src="@mipmap/ic_my_video" />

        <TextView
            android:id="@+id/txt_my_MV"
            style="@style/local_fragment"
            android:paddingBottom="8dp"
            android:text="@string/mv" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:background="@color/alpha_05_black"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/img_build_menu_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:src="@mipmap/ic_rotate_arrows"/>
        <TextView
            android:id="@+id/txt_build_menu_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="创建的歌单"
            android:textColor="@color/alpha_35_black"
            android:textSize="@dimen/x12" />

        <ImageView
            android:id="@+id/img_build_menu_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingRight="@dimen/x16"
            android:src="@mipmap/ic_more_operation" />
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rec_build_menu"
        android:layout_width="match_parent"
        android:visibility="gone"

        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:background="@color/alpha_05_black"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/img_collect_menu_arrow"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:src="@mipmap/ic_rotate_arrows"/>
        <TextView
            android:id="@+id/txt_collect_menu_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="收藏的歌单"
            android:textColor="@color/alpha_35_black"
            android:textSize="@dimen/x12" />

        <ImageView
            android:id="@+id/txt_collect_menu_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingRight="@dimen/x16"
            android:src="@mipmap/ic_more_operation" />
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rec_collect_menu"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="wrap_content"/>
</LinearLayout>